// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compile Handle duplicates Compiler with \`unreachableDefinitions\` option working correctly 1`] = `
"
export type A1GetParams = (\\"production\\" | \\"staging\\" | \\"development\\" | \\"test\\")

export type Mode = number

export type Mode1 = string

export type Mode2 = string

export type Mode3 = (\\"production\\" | \\"staging\\" | \\"development\\" | \\"test\\")

export interface API {
\\"/a\\": {
GET: A1Get
}
\\"/b\\": {
GET: B1Get
}
\\"/c\\": {
GET: C1Get
}
\\"/d\\": {
GET: D1Get
}
}

export interface A1Get {
Querystring: unknown
Params: A1GetParams
Headers: unknown
Reply: unknown
}

export interface B1Get {
Querystring: unknown
Params: Mode
Headers: unknown
Reply: unknown
}

export interface C1Get {
Querystring: unknown
Params: Mode1
Headers: unknown
Reply: unknown
}

export interface D1Get {
Querystring: unknown
Params: Mode2
Headers: unknown
Reply: unknown
}

/**
 * This interface was referenced by \`API\`'s JSON-Schema
 * via the \`definition\` \\"enums\\".
 */
export interface Enums {
mode: Mode3
}
"
`;

exports[`Compile Handle duplicates Compiler working correctly 1`] = `
"
export type AGetParams = (\\"production\\" | \\"staging\\" | \\"development\\" | \\"test\\")

export type Mode = number

export type Mode1 = string

export type Mode2 = string

export interface API {
\\"/a\\": {
GET: AGet
}
\\"/b\\": {
GET: BGet
}
\\"/c\\": {
GET: CGet
}
\\"/d\\": {
GET: DGet
}
}

export interface AGet {
Querystring: unknown
Params: AGetParams
Headers: unknown
Reply: unknown
}

export interface BGet {
Querystring: unknown
Params: Mode
Headers: unknown
Reply: unknown
}

export interface CGet {
Querystring: unknown
Params: Mode1
Headers: unknown
Reply: unknown
}

export interface DGet {
Querystring: unknown
Params: Mode2
Headers: unknown
Reply: unknown
}
"
`;

exports[`Compile Handle refs Compiler with \`unreachableDefinitions\` option working correctly 1`] = `
"
export type RootGetParams = (\\"production\\" | \\"staging\\" | \\"development\\" | \\"test\\")

export type RootGetReply = Mode

export type Mode = (\\"production\\" | \\"staging\\" | \\"development\\" | \\"test\\")

export interface API {
\\"/\\": {
GET: RootGet
}
}

export interface RootGet {
Querystring: unknown
Params: RootGetParams
Headers: unknown
Reply: RootGetReply
}

/**
 * This interface was referenced by \`API\`'s JSON-Schema
 * via the \`definition\` \\"enums\\".
 */
export interface Enums {
mode: Mode
}
"
`;

exports[`Compile Handle refs Compiler working correctly 1`] = `
"
export type RootGetParams = (\\"production\\" | \\"staging\\" | \\"development\\" | \\"test\\")

export type RootGetReply = Mode

export type Mode = (\\"production\\" | \\"staging\\" | \\"development\\" | \\"test\\")

export interface API {
\\"/\\": {
GET: RootGet
}
}

export interface RootGet {
Querystring: unknown
Params: RootGetParams
Headers: unknown
Reply: RootGetReply
}
"
`;

exports[`Transform root level Transformer works correctly 1`] = `
Object {
  "/bar": Object {
    "additionalProperties": false,
    "properties": Object {
      "DELETE": Object {
        "additionalProperties": false,
        "description": undefined,
        "properties": Object {
          "Headers": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarDeleteHeaders",
            "type": "object",
          },
          "Params": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarDeleteParams",
            "type": "object",
          },
          "Querystring": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarDeleteQuerystring",
            "type": "object",
          },
          "Reply": Object {
            "additionalProperties": false,
            "oneOf": Array [
              Object {
                "additionalProperties": false,
                "properties": Object {},
                "required": Array [],
                "title": "BarDeleteReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "BarDeleteReply",
            "type": "object",
          },
        },
        "required": Array [
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "BarDelete",
        "type": "object",
      },
      "GET": Object {
        "additionalProperties": false,
        "description": undefined,
        "properties": Object {
          "Headers": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarGetHeaders",
            "type": "object",
          },
          "Params": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarGetParams",
            "type": "object",
          },
          "Querystring": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarGetQuerystring",
            "type": "object",
          },
          "Reply": Object {
            "additionalProperties": false,
            "oneOf": Array [
              Object {
                "additionalProperties": false,
                "properties": Object {},
                "required": Array [],
                "title": "BarGetReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "BarGetReply",
            "type": "object",
          },
        },
        "required": Array [
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "BarGet",
        "type": "object",
      },
      "HEAD": Object {
        "additionalProperties": false,
        "description": undefined,
        "properties": Object {
          "Headers": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarHeadHeaders",
            "type": "object",
          },
          "Params": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarHeadParams",
            "type": "object",
          },
          "Querystring": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarHeadQuerystring",
            "type": "object",
          },
          "Reply": Object {
            "additionalProperties": false,
            "oneOf": Array [
              Object {
                "additionalProperties": false,
                "properties": Object {},
                "required": Array [],
                "title": "BarHeadReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "BarHeadReply",
            "type": "object",
          },
        },
        "required": Array [
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "BarHead",
        "type": "object",
      },
      "OPTIONS": Object {
        "additionalProperties": false,
        "description": undefined,
        "properties": Object {
          "Headers": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarOptionsHeaders",
            "type": "object",
          },
          "Params": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarOptionsParams",
            "type": "object",
          },
          "Querystring": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarOptionsQuerystring",
            "type": "object",
          },
          "Reply": Object {
            "additionalProperties": false,
            "oneOf": Array [
              Object {
                "additionalProperties": false,
                "properties": Object {},
                "required": Array [],
                "title": "BarOptionsReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "BarOptionsReply",
            "type": "object",
          },
        },
        "required": Array [
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "BarOptions",
        "type": "object",
      },
      "PATCH": Object {
        "additionalProperties": false,
        "description": undefined,
        "properties": Object {
          "Body": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarPatchBody",
            "type": "object",
          },
          "Headers": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarPatchHeaders",
            "type": "object",
          },
          "Params": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarPatchParams",
            "type": "object",
          },
          "Querystring": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarPatchQuerystring",
            "type": "object",
          },
          "Reply": Object {
            "additionalProperties": false,
            "oneOf": Array [
              Object {
                "additionalProperties": false,
                "properties": Object {},
                "required": Array [],
                "title": "BarPatchReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "BarPatchReply",
            "type": "object",
          },
        },
        "required": Array [
          "Body",
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "BarPatch",
        "type": "object",
      },
      "POST": Object {
        "additionalProperties": false,
        "description": undefined,
        "properties": Object {
          "Body": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarPostBody",
            "type": "object",
          },
          "Headers": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarPostHeaders",
            "type": "object",
          },
          "Params": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarPostParams",
            "type": "object",
          },
          "Querystring": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarPostQuerystring",
            "type": "object",
          },
          "Reply": Object {
            "additionalProperties": false,
            "oneOf": Array [
              Object {
                "additionalProperties": false,
                "properties": Object {},
                "required": Array [],
                "title": "BarPostReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "BarPostReply",
            "type": "object",
          },
        },
        "required": Array [
          "Body",
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "BarPost",
        "type": "object",
      },
      "PUT": Object {
        "additionalProperties": false,
        "description": undefined,
        "properties": Object {
          "Body": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarPutBody",
            "type": "object",
          },
          "Headers": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarPutHeaders",
            "type": "object",
          },
          "Params": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarPutParams",
            "type": "object",
          },
          "Querystring": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "BarPutQuerystring",
            "type": "object",
          },
          "Reply": Object {
            "additionalProperties": false,
            "oneOf": Array [
              Object {
                "additionalProperties": false,
                "properties": Object {},
                "required": Array [],
                "title": "BarPutReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "BarPutReply",
            "type": "object",
          },
        },
        "required": Array [
          "Body",
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "BarPut",
        "type": "object",
      },
    },
    "required": Array [
      "DELETE",
      "GET",
      "HEAD",
      "OPTIONS",
      "PATCH",
      "POST",
      "PUT",
    ],
    "title": undefined,
    "type": "object",
  },
  "/foo": Object {
    "additionalProperties": false,
    "properties": Object {
      "DELETE": Object {
        "additionalProperties": false,
        "description": undefined,
        "properties": Object {
          "Headers": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooDeleteHeaders",
            "type": "object",
          },
          "Params": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooDeleteParams",
            "type": "object",
          },
          "Querystring": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooDeleteQuerystring",
            "type": "object",
          },
          "Reply": Object {
            "additionalProperties": false,
            "oneOf": Array [
              Object {
                "additionalProperties": false,
                "properties": Object {},
                "required": Array [],
                "title": "FooDeleteReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "FooDeleteReply",
            "type": "object",
          },
        },
        "required": Array [
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "FooDelete",
        "type": "object",
      },
      "GET": Object {
        "additionalProperties": false,
        "description": undefined,
        "properties": Object {
          "Headers": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooGetHeaders",
            "type": "object",
          },
          "Params": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooGetParams",
            "type": "object",
          },
          "Querystring": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooGetQuerystring",
            "type": "object",
          },
          "Reply": Object {
            "additionalProperties": false,
            "oneOf": Array [
              Object {
                "additionalProperties": false,
                "properties": Object {},
                "required": Array [],
                "title": "FooGetReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "FooGetReply",
            "type": "object",
          },
        },
        "required": Array [
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "FooGet",
        "type": "object",
      },
      "HEAD": Object {
        "additionalProperties": false,
        "description": undefined,
        "properties": Object {
          "Headers": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooHeadHeaders",
            "type": "object",
          },
          "Params": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooHeadParams",
            "type": "object",
          },
          "Querystring": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooHeadQuerystring",
            "type": "object",
          },
          "Reply": Object {
            "additionalProperties": false,
            "oneOf": Array [
              Object {
                "additionalProperties": false,
                "properties": Object {},
                "required": Array [],
                "title": "FooHeadReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "FooHeadReply",
            "type": "object",
          },
        },
        "required": Array [
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "FooHead",
        "type": "object",
      },
      "OPTIONS": Object {
        "additionalProperties": false,
        "description": undefined,
        "properties": Object {
          "Headers": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooOptionsHeaders",
            "type": "object",
          },
          "Params": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooOptionsParams",
            "type": "object",
          },
          "Querystring": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooOptionsQuerystring",
            "type": "object",
          },
          "Reply": Object {
            "additionalProperties": false,
            "oneOf": Array [
              Object {
                "additionalProperties": false,
                "properties": Object {},
                "required": Array [],
                "title": "FooOptionsReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "FooOptionsReply",
            "type": "object",
          },
        },
        "required": Array [
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "FooOptions",
        "type": "object",
      },
      "PATCH": Object {
        "additionalProperties": false,
        "description": undefined,
        "properties": Object {
          "Body": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooPatchBody",
            "type": "object",
          },
          "Headers": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooPatchHeaders",
            "type": "object",
          },
          "Params": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooPatchParams",
            "type": "object",
          },
          "Querystring": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooPatchQuerystring",
            "type": "object",
          },
          "Reply": Object {
            "additionalProperties": false,
            "oneOf": Array [
              Object {
                "additionalProperties": false,
                "properties": Object {},
                "required": Array [],
                "title": "FooPatchReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "FooPatchReply",
            "type": "object",
          },
        },
        "required": Array [
          "Body",
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "FooPatch",
        "type": "object",
      },
      "POST": Object {
        "additionalProperties": false,
        "description": undefined,
        "properties": Object {
          "Body": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooPostBody",
            "type": "object",
          },
          "Headers": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooPostHeaders",
            "type": "object",
          },
          "Params": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooPostParams",
            "type": "object",
          },
          "Querystring": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooPostQuerystring",
            "type": "object",
          },
          "Reply": Object {
            "additionalProperties": false,
            "oneOf": Array [
              Object {
                "additionalProperties": false,
                "properties": Object {},
                "required": Array [],
                "title": "FooPostReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "FooPostReply",
            "type": "object",
          },
        },
        "required": Array [
          "Body",
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "FooPost",
        "type": "object",
      },
      "PUT": Object {
        "additionalProperties": false,
        "description": undefined,
        "properties": Object {
          "Body": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooPutBody",
            "type": "object",
          },
          "Headers": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooPutHeaders",
            "type": "object",
          },
          "Params": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooPutParams",
            "type": "object",
          },
          "Querystring": Object {
            "additionalProperties": false,
            "properties": Object {},
            "required": Array [],
            "title": "FooPutQuerystring",
            "type": "object",
          },
          "Reply": Object {
            "additionalProperties": false,
            "oneOf": Array [
              Object {
                "additionalProperties": false,
                "properties": Object {},
                "required": Array [],
                "title": "FooPutReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "FooPutReply",
            "type": "object",
          },
        },
        "required": Array [
          "Body",
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "FooPut",
        "type": "object",
      },
    },
    "required": Array [
      "DELETE",
      "GET",
      "HEAD",
      "OPTIONS",
      "PATCH",
      "POST",
      "PUT",
    ],
    "title": undefined,
    "type": "object",
  },
}
`;
